# discord-llm-rag

./: .gitignore  Dockerfile  compose.yml  main.py  pyproject.toml
data/: prompt.txt
src/: bot.py  chats.py  document.py  encoder.py  faiss_store.py  loaders.py
